homeworks/kuber/kuber-03/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    tier: node
    app: frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: node
      app: frontend-service
  template:
    metadata:
      labels:
        tier: node
        app: frontend-service
    spec:
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    tier: node
    app: backend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: node
      app: backend-service
  template:
    metadata:
      labels:
        tier: node
        app: backend-service
    spec:
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    tier: node
    app: cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: node
      app: cache-service
  template:
    metadata:
      labels:
        tier: node
        app: cache-service
    spec:
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
---
